Make equipment stop working instead of break
Co-authored-by: LemmaEOF <6722691+LemmaEOF@users.noreply.github.com>
Co-authored-by: Infinidoge <infinidoge@inx.moe>

--- a/src/main/resources/assets/tinkerers_smithing/lang/en_us.json
+++ b/src/main/resources/assets/tinkerers_smithing/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "container.repair.work": "Work Cost: %d",
-  "tag.tinkerers_smithing.dework_ingredients": "De-working Materials"
+  "tag.tinkerers_smithing.dework_ingredients": "De-working Materials",
+  "item.tinkerers_smithing.broken": "Broken"
 }
