--- a/src/main/resources/assets/tinkerers_smithing/lang/en_us.json
+++ b/src/main/resources/assets/tinkerers_smithing/lang/en_us.json
@@ -2,22 +2,22 @@
   "container.repair.work": "Work Cost: %d",
   "item.tinkerers_smithing.broken": "Broken",
   "tag.tinkerers_smithing.dework_ingredients": "De-working Materials",
-  "tag.tinkerers_smithing.sacrifice.netherite_1": "Netherite Equipment (1 Unit)",
-  "tag.tinkerers_smithing.sacrifice.netherite_2": "Netherite Equipment (2 Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_3": "Netherite Equipment (3 Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_4": "Netherite Equipment (4 Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_5": "Netherite Equipment (5 Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_6": "Netherite Equipment (6 Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_7": "Netherite Equipment (7 Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_8": "Netherite Equipment (8 Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_9": "Netherite Equipment (9 Units)",
+  "tag.tinkerers_smithing.sacrifice.netherite_1": "1-Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_2": "2-Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_3": "3-Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_4": "4-Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_5": "5-Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_6": "6-Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_7": "7-Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_8": "8-Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_9": "9-Cost Netherite Equipment",
   "tag.tinkerers_smithing.sacrifice.netherite_1_plus": "Netherite Equipment",
-  "tag.tinkerers_smithing.sacrifice.netherite_2_plus": "Netherite Equipment (2+ Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_3_plus": "Netherite Equipment (3+ Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_4_plus": "Netherite Equipment (4+ Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_5_plus": "Netherite Equipment (5+ Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_6_plus": "Netherite Equipment (6+ Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_7_plus": "Netherite Equipment (7+ Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_8_plus": "Netherite Equipment (8+ Units)",
-  "tag.tinkerers_smithing.sacrifice.netherite_9_plus": "Netherite Equipment (9+ Units)"
+  "tag.tinkerers_smithing.sacrifice.netherite_2_plus": "2+ Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_3_plus": "3+ Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_4_plus": "4+ Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_5_plus": "5+ Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_6_plus": "6+ Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_7_plus": "7+ Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_8_plus": "8+ Cost Netherite Equipment",
+  "tag.tinkerers_smithing.sacrifice.netherite_9_plus": "9+ Cost Netherite Equipment"
 }
